Bucket - - Fix alignment issue

--- a/packages/ui/src/7-components/_bucket.scss
+++ b/packages/ui/src/7-components/_bucket.scss
@@ -9,12 +9,14 @@
   grid-template-columns: 1fr auto;
   grid-template-rows:auto auto 1fr;
   column-gap: pxToRem(16);
+  min-block-size: pxToRem(182);
+  block-size: 100%;
 
   .eyebrow-heading-3  { grid-area:small-header; color:hsl(var(--small-title-color)); align-self:center; margin-block-end:pxToRem(8); }
   .bucket-status      { grid-area:status; }
   .heading-level-6    { grid-area:big-header; }
-  .bucket-options     { grid-area:options; display:flex; flex-wrap:wrap; gap:pxToRem(16); align-self:end; justify-self:start; margin-block-start:pxToRem(96); }
-  .bucket-icons       { grid-area:icon-info; justify-content:end; margin-block-start:pxToRem(96); line-height:1; }
+  .bucket-options     { grid-area:options; display:flex; flex-wrap:wrap; gap:pxToRem(16); align-self:end; justify-self:start; margin-block-start:pxToRem(16); }
+  .bucket-icons       { grid-area:icon-info; justify-content:end; align-self:end; margin-block-start:pxToRem(16); line-height:1; }
 
   .bucket-icons {
     [class*="icon"]::before { vertical-align:sub; }
